--- a/docs/_leetcode/2019-9-7-1. 两数之和.md
+++ b/docs/_leetcode/2019-9-7-1. 两数之和.md
@@ -6,20 +6,26 @@ author: can
 location: Shanghai
 lang: zh-CN
 ---
+
 # 1. 两数之和
 
 ### 题目描述
-给定一个整数数组 nums 和一个目标值 target，请你在该数组中找出和为目标值的那 **两个** 整数，并返回他们的数组下标。
+
+给定一个整数数组 nums  和一个目标值 target，请你在该数组中找出和为目标值的那  **两个**  整数，并返回他们的数组下标。
 
 你可以假设每种输入只会对应一个答案。但是，你不能重复利用这个数组中同样的元素。
 **示例:**
 
 > 给定 nums = [2, 7, 11, 15], target = 9 <br/><br/> 因为 nums[0] + nums[1] = 2 + 7 = 9 <br/> 所以返回 [0, 1]
 
-
 ### 解法
 
 #### 解法一（暴力解决法）
+
+- 解题思路：
+  暴力法就是直接遍历 x , 继续遍历 x 之后的 y , 判断 x + y 是否等于 target。
+
+- 代码实现：
 
 ```js
 /**
@@ -28,13 +34,36 @@ lang: zh-CN
  * @return {number[]}
  */
 var twoSum = function(nums, target) {
-    const length = nums.length;
-    for(let i = 0; i < length - 1; i++) {
-        for(let j = i + 1; j< length; j++) {
-            if(nums[i] + nums[j] == target) {
-                return [i, j]
-            }
-        }
+  const length = nums.length;
+  for (let i = 0; i < length - 1; i++) {
+    for (let j = i + 1; j < length; j++) {
+      if (nums[i] + nums[j] == target) {
+        return [i, j];
+      }
     }
+  }
 };
 ```
+
+- 执行结果：
+  ![执行结果](https://raw.githubusercontent.com/volcanoliuc/vue-blog/images/images20190907140754.png)
+
+#### 解法二（一遍哈希表）
+
+
+```js
+var twoSum = function(nums, target) {
+  const map = new Map();
+  for (let i = 0; i < nums.length; i++) {
+    const num = nums[i];
+    const res = target - num;
+    const value = map.get(res);
+    if (value !== undefined) {
+      return [value, i];
+    }
+    map.set(num, i);
+  }
+};
+```
+- 执行结果：
+  ![执行结果](https://raw.githubusercontent.com/volcanoliuc/vue-blog/images/images20190908095621.png)
