--- a/docs/_leetcode/2019-9-7-1. 两数之和.md
+++ b/docs/_leetcode/2019-9-7-1. 两数之和.md
@@ -49,7 +49,12 @@ var twoSum = function(nums, target) {
   ![执行结果](https://raw.githubusercontent.com/volcanoliuc/vue-blog/images/images20190907140754.png)
 
 #### 解法二（一遍哈希表）
+- 解题思路：
+  新建一个 Map，对数组进行遍历，假设遍历的是 x，res = target - x，再判断一下 Map 中是否有 res，没有的话把当前的值作为 key，索引作为 value 存入 Map 中，有的话则终止循环，返回 Map 的 value 以及当前的索引值。
 
+  当然也可以使用一个对象进行存储数据，只需要注意一下对象的 key 值是字符串。
+
+- 代码实现：
 
 ```js
 var twoSum = function(nums, target) {
