--- a/docs/_leetcode/2019-9-7-1. 两数之和.md
+++ b/docs/_leetcode/2019-9-7-1. 两数之和.md
@@ -25,6 +25,25 @@ lang: zh-CN
 - 解题思路：
   暴力法就是直接遍历 x , 继续遍历 x 之后的 y , 判断 x + y 是否等于 target。
 
+  > 假设 nums = [1, 2, 7, 11, 15], target = 9
+
+  **nums[0] + nums[1] = 3 != target，继续循环，**
+  <br/>
+  <div style="text-align: center"><img src="https://raw.githubusercontent.com/volcanoliuc/vue-blog/images/images20190910093746.png" style="height: 250px;"/></div>
+  <br/>
+  **...**
+  <br/>
+  <br/>
+  **nums[0] + nums[4] = 16 != target，继续循环，**
+  <br/>
+  <div style="text-align: center"><img src="https://raw.githubusercontent.com/volcanoliuc/vue-blog/images/images20190910094206.png" style="height: 250px;"/></div>
+  <br/>
+  **nums[1] + nums[2] = 9 = target，终止循环，返回 [1, 2]。**
+  <br/>
+  <div style="text-align: center"><img src="https://raw.githubusercontent.com/volcanoliuc/vue-blog/images/images20190910094501.png" style="height: 250px;"/></div>
+  <br/>
+  <br/>
+
 - 代码实现：
 
 ```js
@@ -53,6 +72,20 @@ var twoSum = function(nums, target) {
   新建一个 Map，对数组进行遍历，假设遍历的是 x，res = target - x，再判断一下 Map 中是否有 res，没有的话把当前的值作为 key，索引作为 value 存入 Map 中，有的话则终止循环，返回 Map 的 value 以及当前的索引值。
 
   当然也可以使用一个对象进行存储数据，只需要注意一下对象的 key 值是字符串。
+
+  > 假设 nums = [1, 2, 7, 11, 15], target = 9
+
+  **创建一个 Map，开始循环**
+  ![](https://i.loli.net/2019/09/10/ZDBMlYQcgeGKhFx.png)
+  **target-nums[0] = 8, 判断Map 中是否有键值为 8 的数据**
+  ![](https://i.loli.net/2019/09/10/5wbuCvD6VjUNJXg.png)
+  **不存在键值为 8 的值，则把 nums[0]和索引 0 存入 Map 中, 继续循环**
+  ![](https://i.loli.net/2019/09/10/C2x85jDXMTNrldo.png)
+  **...**
+  <br/>
+  **target-nums[2] = 2, Map 中存在键值为 2 的数据，返回 [Map[2], 2] => [1, 2]**
+  <br/>
+  ![](https://i.loli.net/2019/09/10/SeU8sVLOzAtNcul.png)
 
 - 代码实现：
 
