--- a/docs/_leetcode/2019-9-12-2. 两数相加.md
+++ b/docs/_leetcode/2019-9-12-2. 两数相加.md
@@ -2,6 +2,7 @@
 date: 2019-09-12
 tag:
   - leetcode
+  - 链表
 author: Lemon
 location: Shanghai
 lang: zh-CN
@@ -24,7 +25,20 @@ lang: zh-CN
 ### 解法
 
 - 解题思路：
-  待更新
+  1. 声明一个临时变量 carry 用来存储两数相加的“溢出”的数值
+  2. 声明 temp1、temp2 存储 l1、l2 的头部数据
+  3. 声明一个链表 listNode 用来存储 l1、l2 相加后的数据
+  4. 声明 current 存储当前指向 listNode 的节点
+  5. 遍历 l1、l2 直至它们的末端，如果 carry 不为 0 继续遍历
+    1. 将 x 设为结点 temp1 的值。如果 temp1 已经到达 l1 的末尾，则将其值设置为 0
+    2. 将 y 设为结点 temp2 的值。如果 temp2 已经到达 l2 的末尾，则将其值设置为 0
+    3. sum = x + y + carry
+    4. 更新 carry 为 sum 的整除 10 后的值
+    5. 更新 sum 除 10 后的余数，添加到 listNode 的末尾，并且更新最新的 current 指向
+  6. 返回 listNode 的下一个节点
+
+- 图解示例：
+  ![图解示例](https://raw.githubusercontent.com/volcanoliuc/vue-blog/images/images20190915213303.png)
 
 - 代码实现：
 
@@ -53,9 +67,9 @@ var addTwoNumbers = function(l1, l2) {
   let listNode = new ListNode(0);
   let current = listNode;
   while (temp1 || temp2 || carry) {
-    const val1 = temp1 ? temp1.val : 0;
-    const val2 = temp2 ? temp2.val : 0;
-    const sum = val1 + val2 + carry;
+    const x = temp1 ? temp1.val : 0;
+    const y = temp2 ? temp2.val : 0;
+    const sum = x + y + carry;
     const val = sum % 10;
 
     carry = Math.floor(sum / 10);
