--- a/docs/_leetcode/2019-9-12-2. 两数相加.md
+++ b/docs/_leetcode/2019-9-12-2. 两数相加.md
@@ -25,17 +25,17 @@ lang: zh-CN
 ### 解法
 
 - 解题思路：
-  1. 声明一个临时变量 carry 用来存储两数相加的“溢出”的数值
-  2. 声明 temp1、temp2 存储 l1、l2 的头部数据
-  3. 声明一个链表 listNode 用来存储 l1、l2 相加后的数据
-  4. 声明 current 存储当前指向 listNode 的节点
-  5. 遍历 l1、l2 直至它们的末端，如果 carry 不为 0 继续遍历
-    1. 将 x 设为结点 temp1 的值。如果 temp1 已经到达 l1 的末尾，则将其值设置为 0
-    2. 将 y 设为结点 temp2 的值。如果 temp2 已经到达 l2 的末尾，则将其值设置为 0
-    3. sum = x + y + carry
-    4. 更新 carry 为 sum 的整除 10 后的值
-    5. 更新 sum 除 10 后的余数，添加到 listNode 的末尾，并且更新最新的 current 指向
-  6. 返回 listNode 的下一个节点
+  - 声明一个临时变量 carry 用来存储两数相加的“溢出”的数值
+  - 声明 temp1、temp2 存储 l1、l2 的头部数据
+  - 声明一个链表 listNode 用来存储 l1、l2 相加后的数据
+  - 声明 current 存储当前指向 listNode 的节点
+  - 遍历 l1、l2 直至它们的末端，如果 carry 不为 0 继续遍历
+    - 将 x 设为结点 temp1 的值。如果 temp1 已经到达 l1 的末尾，则将其值设置为 0
+    - 将 y 设为结点 temp2 的值。如果 temp2 已经到达 l2 的末尾，则将其值设置为 0
+    - sum = x + y + carry
+    - 更新 carry 为 sum 的整除 10 后的值
+    - 更新 sum 除 10 后的余数，添加到 listNode 的末尾，并且更新最新的 current 指向
+  - 返回 listNode 的下一个节点
 
 - 图解示例：
   ![图解示例](https://raw.githubusercontent.com/volcanoliuc/vue-blog/images/images20190915213303.png)
