--- a/docs/_leetcode/2019-9-16-3. 无重复字符的最长子串.md
+++ b/docs/_leetcode/2019-9-16-3. 无重复字符的最长子串.md
@@ -35,8 +35,10 @@ lang: zh-CN
 #### 解法一（滑动窗口）
 
 - 解题思路：
+ 声明一个数组 arr 用来存储无重复字符的最长子串，声明 maxLength 代表最长子串的长度，对字符串 s 进行遍历，如果数组 arr 中包含了当前字符，丢弃数组中当前字符以及字符之前所有的字符。把当前字符添加到 arr 中，如果 arr 的长度大于maxLength，则更新 maxLength 为 arr.length
 
-* 图解示例：
+ - 示例图解
+ ![示例图解](https://raw.githubusercontent.com/lemon-lc/vue-blog/images/images20190916220026.png)
 
 - 代码实现：
 
@@ -67,7 +69,13 @@ var lengthOfLongestSubstring = function(s) {
 
 - 解题思路：
 
-* 图解示例：
+  - 定义一个对象 obj，key 值为字符串中的字符，value 为字符串的索引 +1，加 1 表示从字符位置后一个才开始不重复
+  - 定义最大长度为 maxLength，子串的起始位置为 start = 0
+  - 循环遍历字符串，判断 obj 中是否含有当前字符
+    - 如果含有当前字符更新 start 的值
+    - 重新计算 maxLength 的值
+    - 把当前的 key， value 存入到 obj 中
+  - 返回 maxLength
 
 - 代码实现：
 
@@ -82,11 +90,11 @@ var lengthOfLongestSubstring = function(s) {
     let start = 0;
 
     Array.from(s).forEach((key, end) => {
-        if(obj[key]) {
-            start = Math.max(obj[key], start);
-        }
-        maxLength = Math.max(end - start + 1, maxLength)
-        obj[key] = end + 1;
+      if(obj[key]) {
+        start = Math.max(obj[key], start);
+      }
+      maxLength = Math.max(end - start + 1, maxLength)
+      obj[key] = end + 1;
     })
 
     return maxLength;
@@ -94,5 +102,5 @@ var lengthOfLongestSubstring = function(s) {
 ```
 
 - 执行结果：
-![执行结果](https://raw.githubusercontent.com/volcanoliuc/vue-blog/images/images20190916104630.png)
+![执行结果](https://raw.githubusercontent.com/lemon-lc/vue-blog/images/images20190917082907.png)
 
