--- a/docs/_leetcode/2019-9-17-4. 寻找两个有序数组的中位数.md
+++ b/docs/_leetcode/2019-9-17-4. 寻找两个有序数组的中位数.md
@@ -35,12 +35,11 @@ nums2 = [3, 4]
 
 ### 解法
 
-#### 解法一
+#### 解法一（暴力法）
 
 - 解题思路：
 
  - 示例图解
- ![示例图解](https://raw.githubusercontent.com/lemon-lc/vue-blog/images/images20190916220026.png)
 
 - 代码实现：
 
@@ -68,43 +67,3 @@ const findMedianSortedArrays = function(nums1, nums2) {
 
 - 执行结果：
 ![执行结果](https://raw.githubusercontent.com/volcanoliuc/vue-blog/images/images20190916104630.png)
-
-#### 解法二（官方滑动窗口）
-
-- 解题思路：
-
-  - 定义一个对象 obj，key 值为字符串中的字符，value 为字符串的索引 +1，加 1 表示从字符位置后一个才开始不重复
-  - 定义最大长度为 maxLength，子串的起始位置为 start = 0
-  - 循环遍历字符串，判断 obj 中是否含有当前字符
-    - 如果含有当前字符更新 start 的值
-    - 重新计算 maxLength 的值
-    - 把当前的 key， value 存入到 obj 中
-  - 返回 maxLength
-
-- 代码实现：
-
-```js
-/**
- * @param {string} s
- * @return {number}
- */
-var lengthOfLongestSubstring = function(s) {
-    let maxLength = 0;
-    let obj = {};
-    let start = 0;
-
-    Array.from(s).forEach((key, end) => {
-      if(obj[key]) {
-        start = Math.max(obj[key], start);
-      }
-      maxLength = Math.max(end - start + 1, maxLength)
-      obj[key] = end + 1;
-    })
-
-    return maxLength;
-};
-```
-
-- 执行结果：
-![执行结果](https://raw.githubusercontent.com/lemon-lc/vue-blog/images/images20190917082907.png)
-
