--- a/docs/_leetcode/2019-9-7-1. 两数之和.md
+++ b/docs/_leetcode/2019-9-7-1. 两数之和.md
@@ -68,6 +68,7 @@ var twoSum = function(nums, target) {
   ![执行结果](https://raw.githubusercontent.com/volcanoliuc/vue-blog/images/images20190907140754.png)
 
 #### 解法二（一遍哈希表）
+
 - 解题思路：
   新建一个 Map，对数组进行遍历，假设遍历的是 x，res = target - x，再判断一下 Map 中是否有 res，没有的话把当前的值作为 key，索引作为 value 存入 Map 中，有的话则终止循环，返回 Map 的 value 以及当前的索引值。
 
@@ -76,16 +77,16 @@ var twoSum = function(nums, target) {
   > 假设 nums = [1, 2, 7, 11, 15], target = 9
 
   **创建一个 Map，开始循环**
-  ![](https://i.loli.net/2019/09/10/ZDBMlYQcgeGKhFx.png)
+  ![1](https://i.loli.net/2019/09/10/ZDBMlYQcgeGKhFx.png)
   **target-nums[0] = 8, 判断Map 中是否有键值为 8 的数据**
-  ![](https://i.loli.net/2019/09/10/5wbuCvD6VjUNJXg.png)
+  ![2](https://i.loli.net/2019/09/10/5wbuCvD6VjUNJXg.png)
   **不存在键值为 8 的值，则把 nums[0]和索引 0 存入 Map 中, 继续循环**
-  ![](https://i.loli.net/2019/09/10/C2x85jDXMTNrldo.png)
+  ![3](https://i.loli.net/2019/09/10/C2x85jDXMTNrldo.png)
   **...**
   <br/>
   **target-nums[2] = 2, Map 中存在键值为 2 的数据，返回 [Map[2], 2] => [1, 2]**
   <br/>
-  ![](https://i.loli.net/2019/09/10/SeU8sVLOzAtNcul.png)
+  ![4](https://i.loli.net/2019/09/10/SeU8sVLOzAtNcul.png)
 
 - 代码实现：
 
@@ -103,5 +104,29 @@ var twoSum = function(nums, target) {
   }
 };
 ```
+
 - 执行结果：
+
   ![执行结果](https://raw.githubusercontent.com/volcanoliuc/vue-blog/images/images20190908095621.png)
+
+#### 解法三
+
+根据解法二我们也可以使用另外一种方案，每次检测一下一遍数组中是否存在差值。
+
+> 使用 indexOf 的执行速度没有使用哈希表执行速度快
+
+```js
+var twoSum = function(nums, target) {
+  for(let i = 0; i < nums.length; i++) {
+      const num = nums[i];
+      const res = target - num;
+      const index = nums.indexOf(res);
+      // 判断数组中是否差值 且不是当前值
+      if(index >= 0 && index !== i) {
+          return [i, index];
+      }
+  }
+};
+```
+
+![执行结果](https://raw.githubusercontent.com/lemon-lc/vue-blog/images/images20191123114058.png)
