--- a/blog/_leetcode/2019-11-13-14. 最长公共前缀.md
+++ b/blog/_leetcode/2019-11-13-14. 最长公共前缀.md
@@ -1,9 +1,7 @@
 ---
-date: 2019-11-14
-tag:
+date: 2019/11/14
+tags:
   - leetcode
-author: Lemon
-location: Shanghai
 lang: zh-CN
 ---
 
@@ -13,24 +11,25 @@ lang: zh-CN
 
 编写一个函数来查找字符串数组中的最长公共前缀。
 
-如果不存在公共前缀，返回空字符串 ""。
+如果不存在公共前缀，返回空字符串  ""。
 
-示例 1:
+示例  1:
 
 输入: ["flower","flow","flight"]
 输出: "fl"
-示例 2:
+示例  2:
 
 输入: ["dog","racecar","car"]
 输出: ""
 解释: 输入不存在公共前缀。
 说明:
 
-所有输入只包含小写字母 a-z 。
+所有输入只包含小写字母  a-z 。
 
 ### 解法:
 
 - 解题思路：
+
   - 默认最长公共前缀是数组中的第一个字符串
   - 利用 reduce 比较每个字符和公共前缀比较，获取新的公共前缀
 
