--- a/blog/_leetcode/2019-11-5-8.字符串转换整数 (atoi).md
+++ b/blog/_leetcode/2019-11-5-8.字符串转换整数 (atoi).md
@@ -1,9 +1,7 @@
 ---
-date: 2019-11-05
-tag:
+date: 2019/11/05
+tags:
   - leetcode
-author: Lemon
-location: Shanghai
 lang: zh-CN
 ---
 
@@ -11,7 +9,7 @@ lang: zh-CN
 
 ### 题目描述
 
-请你来实现一个 atoi 函数，使其能将字符串转换成整数。
+请你来实现一个  atoi  函数，使其能将字符串转换成整数。
 
 首先，该函数会根据需要丢弃无用的开头空格字符，直到寻找到第一个非空格的字符为止。
 
@@ -25,12 +23,12 @@ lang: zh-CN
 
 说明：
 
-假设我们的环境只能存储 32 位大小的有符号整数，那么其数值范围为 [−231,  231 − 1]。如果数值超过这个范围，请返回  INT_MAX (231 − 1) 或 INT_MIN (−231) 。
+假设我们的环境只能存储 32 位大小的有符号整数，那么其数值范围为  [−231,  231 − 1]。如果数值超过这个范围，请返回  INT_MAX (231 − 1) 或  INT_MIN (−231) 。
 
 ### 解法
 
 - 解题思路：
-JS 最简单的实现方式，利用 parseInt 进行类型转换。
+  JS 最简单的实现方式，利用 parseInt 进行类型转换。
 
 - 代码实现：
 
@@ -40,13 +38,13 @@ JS 最简单的实现方式，利用 parseInt 进行类型转换。
  * @return {number}
  */
 var myAtoi = function(str) {
-    const num = parseInt(str.trim());
-    const max = Math.pow(2, 31) - 1
-    const min = Math.pow(-2, 31)
-    if(Number.isNaN(num)) return 0;
-    if(num > max) return max
-    if(num < min) return min
-    return num;
+  const num = parseInt(str.trim());
+  const max = Math.pow(2, 31) - 1;
+  const min = Math.pow(-2, 31);
+  if (Number.isNaN(num)) return 0;
+  if (num > max) return max;
+  if (num < min) return min;
+  return num;
 };
 ```
 
