--- a/blog/_leetcode/2019-9-12-2. 两数相加.md
+++ b/blog/_leetcode/2019-9-12-2. 两数相加.md
@@ -1,10 +1,8 @@
 ---
-date: 2019-09-12
+date: 2019/09/12
 tag:
   - leetcode
   - 链表
-author: Lemon
-location: Shanghai
 lang: zh-CN
 ---
 
@@ -25,6 +23,7 @@ lang: zh-CN
 ### 解法
 
 - 解题思路：
+
   - 声明一个临时变量 carry 用来存储两数相加的“溢出”的数值
   - 声明 temp1、temp2 存储 l1、l2 的头部数据
   - 声明一个链表 listNode 用来存储 l1、l2 相加后的数据
@@ -84,4 +83,4 @@ var addTwoNumbers = function(l1, l2) {
 ```
 
 - 执行结果：
-![执行结果](https://raw.githubusercontent.com/volcanoliuc/vue-blog/images/images20190912131355.png)
+  ![执行结果](https://raw.githubusercontent.com/volcanoliuc/vue-blog/images/images20190912131355.png)
