--- a/blog/_leetcode/2019-9-16-3. 无重复字符的最长子串.md
+++ b/blog/_leetcode/2019-9-16-3. 无重复字符的最长子串.md
@@ -1,10 +1,8 @@
 ---
-date: 2019-09-16
-tag:
+date: 2019/09/16
+tags:
   - leetcode
   - 子串
-author: Lemon
-location: Shanghai
 lang: zh-CN
 ---
 
@@ -36,10 +34,10 @@ lang: zh-CN
 #### 解法一（滑动窗口）
 
 - 解题思路：
- 声明一个数组 arr 用来存储无重复字符的最长子串，声明 maxLength 代表最长子串的长度，对字符串 s 进行遍历，如果数组 arr 中包含了当前字符，丢弃数组中当前字符以及字符之前所有的字符。把当前字符添加到 arr 中，如果 arr 的长度大于maxLength，则更新 maxLength 为 arr.length
+  声明一个数组 arr 用来存储无重复字符的最长子串，声明 maxLength 代表最长子串的长度，对字符串 s 进行遍历，如果数组 arr 中包含了当前字符，丢弃数组中当前字符以及字符之前所有的字符。把当前字符添加到 arr 中，如果 arr 的长度大于 maxLength，则更新 maxLength 为 arr.length
 
- - 示例图解
- ![示例图解](https://raw.githubusercontent.com/lemon-lc/vue-blog/images/images20190916220026.png)
+- 示例图解
+  ![示例图解](https://raw.githubusercontent.com/lemon-lc/vue-blog/images/images20190916220026.png)
 
 - 代码实现：
 
@@ -64,7 +62,7 @@ var lengthOfLongestSubstring = function(s) {
 ```
 
 - 执行结果：
-![执行结果](https://raw.githubusercontent.com/volcanoliuc/vue-blog/images/images20190916104630.png)
+  ![执行结果](https://raw.githubusercontent.com/volcanoliuc/vue-blog/images/images20190916104630.png)
 
 #### 解法二（官方滑动窗口）
 
@@ -86,22 +84,21 @@ var lengthOfLongestSubstring = function(s) {
  * @return {number}
  */
 var lengthOfLongestSubstring = function(s) {
-    let maxLength = 0;
-    let obj = {};
-    let start = 0;
+  let maxLength = 0;
+  let obj = {};
+  let start = 0;
 
-    Array.from(s).forEach((key, end) => {
-      if(obj[key]) {
-        start = Math.max(obj[key], start);
-      }
-      maxLength = Math.max(end - start + 1, maxLength)
-      obj[key] = end + 1;
-    })
+  Array.from(s).forEach((key, end) => {
+    if (obj[key]) {
+      start = Math.max(obj[key], start);
+    }
+    maxLength = Math.max(end - start + 1, maxLength);
+    obj[key] = end + 1;
+  });
 
-    return maxLength;
+  return maxLength;
 };
 ```
 
 - 执行结果：
-![执行结果](https://raw.githubusercontent.com/lemon-lc/vue-blog/images/images20190917082907.png)
-
+  ![执行结果](https://raw.githubusercontent.com/lemon-lc/vue-blog/images/images20190917082907.png)
