--- a/blog/_leetcode/2019-11-1-6.Z字形变换.md
+++ b/blog/_leetcode/2019-11-1-6.Z字形变换.md
@@ -1,9 +1,7 @@
 ---
-date: 2019-11-01
-tag:
+date: 2019/11/01
+tags:
   - leetcode
-author: Lemon
-location: Shanghai
 lang: zh-CN
 ---
 
@@ -11,45 +9,45 @@ lang: zh-CN
 
 ### 题目描述
 
-将一个给定字符串根据给定的行数，以从上往下、从左到右进行 Z 字形排列。
+将一个给定字符串根据给定的行数，以从上往下、从左到右进行  Z 字形排列。
 
-比如输入字符串为 "LEETCODEISHIRING" 行数为 3 时，排列如下：
+比如输入字符串为 "LEETCODEISHIRING"  行数为 3 时，排列如下：
 
-L   C   I   R
+L C I R
 E T O E S I I G
-E   D   H   N
+E D H N
 之后，你的输出需要从左往右逐行读取，产生出一个新的字符串，比如："LCIRETOESIIGEDHN"。
 
 请你实现这个将字符串进行指定行数变换的函数：
 
 string convert(string s, int numRows);
-**示例 1:**
+**示例  1:**
 
 输入: s = "LEETCODEISHIRING", numRows = 3
 输出: "LCIRETOESIIGEDHN"
-**示例 2:**
+**示例  2:**
 
 输入: s = "LEETCODEISHIRING", numRows = 4
 输出: "LDREOEIIECIHNTSG"
 解释:
 
-L     D     R
-E   O E   I I
-E C   I H   N
-T     S     G
+L D R
+E O E I I
+E C I H N
+T S G
 
 ### 解法
 
 - 解题思路：
-**示例 1：**
-s1   L   C   I   R
-s2   E T O E S I I G
-s3   E   D   H   N
-**示例 2：**
-s1   L   D   R
-s2   E O E I I
-s3   E C I H N
-s4   T   S   G
+  **示例 1：**
+  s1 L C I R
+  s2 E T O E S I I G
+  s3 E D H N
+  **示例 2：**
+  s1 L D R
+  s2 E O E I I
+  s3 E C I H N
+  s4 T S G
 
 字符串可以拆分为 min(s.length, numRows) 个子字符串，把子字符串存储到一个数组中。
 
@@ -64,18 +62,18 @@ s4   T   S   G
  * @return {string}
  */
 var convert = function(s, numRows) {
-    if(numRows === 1) return s
-    let arr = [];
-    let index = 0;
-    let flag = 0;
-    s.split('').forEach(el => {
-        if(!arr[index]) arr[index] = '';
-        arr[index] = arr[index] + el
-        if(index === 0) flag = 1
-        if(index === numRows - 1) flag = -1
-        index += flag
-    })
-    return arr.join('');
+  if (numRows === 1) return s;
+  let arr = [];
+  let index = 0;
+  let flag = 0;
+  s.split('').forEach(el => {
+    if (!arr[index]) arr[index] = '';
+    arr[index] = arr[index] + el;
+    if (index === 0) flag = 1;
+    if (index === numRows - 1) flag = -1;
+    index += flag;
+  });
+  return arr.join('');
 };
 ```
 
