--- a/blog/_leetcode/2019-11-9-12. 整数转罗马数字.md
+++ b/blog/_leetcode/2019-11-9-12. 整数转罗马数字.md
@@ -1,10 +1,8 @@
 ---
-date: 2019-11-09
-tag:
+date: 2019/11/09
+tags:
   - leetcode
   - 罗马数字
-author: Lemon
-location: Shanghai
 lang: zh-CN
 ---
 
@@ -84,10 +82,10 @@ C  可以放在  D (500) 和  M (1000) 的左边，来表示  400 和  90
 
 ```js
 function fn(num) {
-    if(num <= 3) return 'I'.repeat(num);
-    if(num === 4) return 'IV';
-    if(num === 9) return 'IX';
-    return `V${'I'.repeat(num)}`;
+  if (num <= 3) return 'I'.repeat(num);
+  if (num === 4) return 'IV';
+  if (num === 9) return 'IX';
+  return `V${'I'.repeat(num)}`;
 }
 ```
 
@@ -134,4 +132,4 @@ function getRomans(num, base, mid, next) {
 ```
 
 - 执行结果：
-![执行结果](https://raw.githubusercontent.com/lemon-lc/vue-blog/images/images20191109125950.png)
+  ![执行结果](https://raw.githubusercontent.com/lemon-lc/vue-blog/images/images20191109125950.png)
