--- a/blog/_leetcode/2019-9-7-1. 两数之和.md
+++ b/blog/_leetcode/2019-9-7-1. 两数之和.md
@@ -1,9 +1,7 @@
 ---
-date: 2019-09-07
-tag:
+date: 2019/09/07
+tags:
   - leetcode
-author: Lemon
-location: Shanghai
 lang: zh-CN
 ---
 
@@ -11,7 +9,7 @@ lang: zh-CN
 
 ### 题目描述
 
-给定一个整数数组 nums  和一个目标值 target，请你在该数组中找出和为目标值的那 *两个* 整数，并返回他们的数组下标。
+给定一个整数数组 nums  和一个目标值 target，请你在该数组中找出和为目标值的那 _两个_ 整数，并返回他们的数组下标。
 
 你可以假设每种输入只会对应一个答案。但是，你不能重复利用这个数组中同样的元素。
 **示例:**
@@ -29,6 +27,7 @@ lang: zh-CN
 
   **nums[0] + nums[1] = 3 != target，继续循环，**
   <br/>
+
   <div style="text-align: center"><img src="https://raw.githubusercontent.com/volcanoliuc/vue-blog/images/images20190910093746.png" style="height: 250px;"/></div>
   <br/>
   **...**
@@ -78,7 +77,7 @@ var twoSum = function(nums, target) {
 
   **创建一个 Map，开始循环**
   ![1](https://i.loli.net/2019/09/10/ZDBMlYQcgeGKhFx.png)
-  **target-nums[0] = 8, 判断Map 中是否有键值为 8 的数据**
+  **target-nums[0] = 8, 判断 Map 中是否有键值为 8 的数据**
   ![2](https://i.loli.net/2019/09/10/5wbuCvD6VjUNJXg.png)
   **不存在键值为 8 的值，则把 nums[0]和索引 0 存入 Map 中, 继续循环**
   ![3](https://i.loli.net/2019/09/10/C2x85jDXMTNrldo.png)
@@ -117,14 +116,14 @@ var twoSum = function(nums, target) {
 
 ```js
 var twoSum = function(nums, target) {
-  for(let i = 0; i < nums.length; i++) {
-      const num = nums[i];
-      const res = target - num;
-      const index = nums.indexOf(res);
-      // 判断数组中是否差值 且不是当前值
-      if(index >= 0 && index !== i) {
-          return [i, index];
-      }
+  for (let i = 0; i < nums.length; i++) {
+    const num = nums[i];
+    const res = target - num;
+    const index = nums.indexOf(res);
+    // 判断数组中是否差值 且不是当前值
+    if (index >= 0 && index !== i) {
+      return [i, index];
+    }
   }
 };
 ```
